language-server/src/tests/snapshots/gleam_language_server__tests__action__wrap_uncalled_constructor_in_anonymous_function.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  Record\n}\n\ntype Record {\n  Record(i: Int)\n}\n"
---
----- BEFORE ACTION
pub fn main() {
  Record
  ↑     
}

type Record {
  Record(i: Int)
}


----- AFTER ACTION
pub fn main() {
  fn(int) { Record(int) }
}

type Record {
  Record(i: Int)
}
